BCORE-10: DONE!