@@ -12,7 +12,7 @@ repositories {
 }
 
 ext {
-    junitVersion = '5.10.0'
+    junitVersion = '5.12.0'
     assertjVersion = '3.25.3'
 }
 
@@ -21,6 +21,10 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter"
     testImplementation "org.assertj:assertj-core:${assertjVersion}"
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.mockito:mockito-core:5.14.2'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
+    testImplementation 'net.bytebuddy:byte-buddy:1.15.4'
+    testImplementation 'net.bytebuddy:byte-buddy-agent:1.15.4'
 }
 
 application {
@@ -42,8 +46,10 @@ checkstyle {
 
 test {
     useJUnitPlatform()
+    jvmArgs += ["-Dnet.bytebuddy.experimental=true"]
     finalizedBy jacocoTestReport  // генерировать отчёт после тестов
 }
+
 
 
 jacocoTestReport {
